RESOLVED FIXED273915
Navigating to an extension's options page causes the web page to crash
https://bugs.webkit.org/show_bug.cgi?id=273915
Summary Navigating to an extension's options page causes the web page to crash
Kiara Rose
Reported 2024-05-08 17:01:18 PDT
Attachments
Kiara Rose
Comment 1 2024-05-09 09:50:45 PDT
EWS
Comment 2 2024-05-09 10:59:26 PDT
Committed 278577@main (d37bc8614bdb): <https://commits.webkit.org/278577@main> Reviewed commits have been landed. Closing PR #28342 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.